feat: add tags and favicon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,4 +22,6 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background-color: #ffffff;
+  background-image: url("/assets/images/bg-cubes.png");
 }
